# algokit-utils-py

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INVESTIGATION_FINDINGS.md  MIGRATION-NOTES.md  README.md  combined_algokit_utils.py  compile.py  example.env  playground.py  pyproject.toml  semantic-release-fix.patch  utils-py.code-workspace
.github/: pull_request_template.md
api/: __init__.py
api/oas-generator/: README.md  VALIDATION.md  pyproject.toml
api/oas-generator/src/api/: __init__.py
api/oas-generator/src/api/oas_generator/: __init__.py  builder.py  cli.py  config.py  loader.py  models.py  naming.py  parser.py  writer.py
api/oas-generator/src/api/oas_generator/renderer/: __init__.py  engine.py  filters.py
api/oas-generator/src/api/oas_generator/renderer/templates/: client.py.j2  config.py.j2  exceptions.py.j2  package_init.py.j2  types.py.j2
api/oas-generator/src/api/oas_generator/renderer/templates/models/: __init__.py.j2  _serde_helpers.py.j2  block.py.j2  enum.py.j2  model.py.j2  type_alias.py.j2
api/oas-generator/src/oas_generator/: builder.py  cli.py  config.py  loader.py  models.py  naming.py  parser.py  writer.py
api/oas-generator/src/oas_generator/renderer/: __init__.py  engine.py  filters.py
api/oas-generator/src/oas_generator/renderer/templates/: client.py.j2  config.py.j2  exceptions.py.j2  package_init.py.j2  types.py.j2
api/oas-generator/src/oas_generator/renderer/templates/models/: __init__.py.j2  _serde_helpers.py.j2  block.py.j2  enum.py.j2  ledger_state_delta.py.j2  model.py.j2  suggested_params.py.j2  type_alias.py.j2
api/oas-generator/tests/: test_naming.py
docs/: .gitignore  api-build.sh  api_build.py  astro.config.mjs  build-sidebar-json.mjs  normalize-links.sphinx.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebar.config.json  sidebar.config.ts  v5-migration.md
examples/: README.md  __init__.py  pyproject.toml  run.sh  verify-all.sh
examples/abi/: 01_type_parsing.py  02_primitive_types.py  03_address_type.py  04_string_type.py  05_static_array.py  06_dynamic_array.py  07_tuple_type.py  08_struct_type.py  09_struct_tuple_conversion.py  10_bool_packing.py  11_abi_method.py  12_avm_types.py  13_type_guards.py  14_complex_nested.py  15_arc56_storage.py  verify-all.sh
examples/algo25/: 01_mnemonic_from_seed.py  02_seed_from_mnemonic.py  03_secret_key_to_mnemonic.py  04_master_derivation_key.py  05_error_handling.py  __init__.py  verify-all.sh
examples/algod_client/: 01_node_health_status.py  02_version_genesis.py  03_ledger_supply.py  04_account_info.py  05_transaction_params.py  06_send_transaction.py  07_pending_transactions.py  08_block_data.py  09_asset_info.py  10_application_info.py  11_application_boxes.py  12_teal_compile.py  13_simulation.py  14_state_deltas.py  15_transaction_proof.py  16_lightblock_proof.py  17_state_proof.py  18_devmode_timestamp.py  19_sync_round.py  __init__.py  verify-all.sh
examples/algorand_client/: 01_client_instantiation.py  02_algo_amount.py  03_signer_config.py  04_params_config.py  05_account_manager.py  06_send_payment.py  07_send_asset_ops.py  08_send_app_ops.py  09_create_transaction.py  10_transaction_composer.py  11_asset_manager.py  12_app_manager.py  13_app_deployer.py  14_client_manager.py  15_error_transformers.py  __init__.py  verify-all.sh
examples/common/: 01_address_basics.py  02_address_encoding.py  03_array_utilities.py  04_constants.py  05_crypto_hash.py  06_logger.py  07_json_bigint.py  08_msgpack.py  09_primitive_codecs.py  10_composite_codecs.py  11_model_codecs.py  12_sourcemap.py  verify-all.sh
examples/indexer_client/: 01_health_check.py  02_account_lookup.py  03_account_assets.py  04_account_applications.py  05_account_transactions.py  06_transaction_lookup.py  07_transaction_search.py  08_asset_lookup.py  09_asset_balances.py  10_asset_transactions.py  11_application_lookup.py  12_application_logs.py  13_application_boxes.py  14_block_lookup.py  15_block_headers.py  16_pagination.py  __init__.py  verify-all.sh
examples/kmd_client/: 01_version.py  02_wallet_management.py  03_wallet_sessions.py  04_key_generation.py  05_key_import_export.py  06_key_listing_deletion.py  07_master_key_export.py  08_multisig_setup.py  09_multisig_management.py  10_transaction_signing.py  11_multisig_signing.py  12_program_signing.py  13_multisig_program_signing.py  __init__.py  verify-all.sh
examples/scripts/: run-example.sh
examples/shared/: __init__.py  constants.py  mock_keyring.py  utils.py
examples/shared/artifacts/: __init__.py
examples/signing/: 01_ed25519_from_keyring.py  02_hd_from_keyring.py  03_aws_kms.py  verify-all.sh
examples/transact/: 01_payment_transaction.py  02_payment_close.py  03_asset_create.py  04_asset_transfer.py  05_asset_freeze.py  06_asset_clawback.py  07_atomic_group.py  08_atomic_swap.py  09_single_sig.py  10_multisig.py  11_logic_sig.py  12_fee_calculation.py  13_encoding_decoding.py  14_app_call.py  __init__.py  verify-all.sh
legacy_v2_tests/: app_client_test.json  app_client_test.py  app_multi_underscore_template_var.py  app_resolve.json  conftest.py  test_account.py  test_app.py  test_app_client.py  test_app_client_call.py  test_app_client_clear_state.py  test_app_client_close_out.py  test_app_client_create.py  test_app_client_delete.py  test_app_client_deploy.py  test_app_client_opt_in.py  test_app_client_prepare.py  test_app_client_resolve.py  test_app_client_signer_sender.py  test_app_client_template_values.py  test_app_client_update.py  test_asset.py  test_debug_utils.py  test_deploy.py  test_deploy_scenarios.py  test_dispenser_api_client.py  test_network_clients.py  test_transfer.py
pr-267/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
scripts/: generate_schemas.py
tests/: app_algorand_client.json  app_client_test.json  app_client_test.py  app_v1.json  app_v2.json  app_v3.json  conf_test.py  conftest.py  helloworld_application_v2.json  test_account.py  test_algorand_client.py  test_app.py  test_app_client.py  test_app_client_call.py  test_app_client_clear_state.py  (+21 more)
(+2024 files in other folders)
