[project]
name = "algokit-utils"
version = "4.2.3"
description = "Utilities for Algorand development for use by AlgoKit"
authors = [
  { name = "Algorand Foundation", email = "contact@algorand.foundation" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
  "httpx>=0.23.1,<=0.28.1",
  "msgpack>=1.0.0,<2",
  "msgpack-types>=0.2.0,<=0.5.0",
  "pynacl>=1.4.0,<2",
  "pycryptodomex>=3.19,<4",
  "typing-extensions>=4.6.0",
]

[dependency-groups]
cicd = []
dev = [
  "pytest>=8,<9",
  "ruff>=0.1.6,<=0.11.8",
  "pip-audit>=2.5.6,<3",
  "pytest-mock~=3.14",
  "mypy>=1.5.1,<2",
  "python-semantic-release>=7.34.3,<8",
  "pytest-cov>=6,<7",
  "pre-commit>=3.4.0,<4",
  "python-dotenv>=1.0.0,<2",
  "sphinx>=8.0.0,<9",
  "poethepoet>=0.19,<0.35",
  "pytest-httpx>=0.35.0,<0.36",
  "pytest-xdist>=3.6.1,<4",
  "linkify-it-py>=2.0.3,<3",
  "setuptools>=80.9.0,<81",
  "pydoclint>=0.6.0,<0.7",
  "pytest-sugar>=1.0.0,<2",
  "types-deprecated>=1.2.15.20241117,<2",
  "sphinx-autobuild>=2024.10.3,<2025",
  "furo>=2024.8.6,<2025",
  "myst-parser>=4.0.0,<5",
  "sphinx-autoapi>=3.4.0,<4",
  "sphinx-markdown-builder>=0.6.8,<0.7",
  "filelock>=3.12.0,<4",
  "syrupy>=5.0.0,<6",
]
api-generator = ["oas-generator"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = [
  "algokit_abi",
  "algokit_algo25",
  "algokit_algod_client",
  "algokit_common",
  "algokit_indexer_client",
  "algokit_kmd_client",
  "algokit_transact",
  "algokit_utils",
]

[tool.uv.sources]
oas-generator = { path = "api/oas-generator", editable = true }

[tool.ruff]
line-length = 120
lint.select = [
  # all possible codes as of this ruff version are listed here,
  # ones we don't want/need are commented out to make it clear
  # which have been omitted on purpose vs which ones get added
  # in new ruff releases and should be considered for enabling
  "F", # pyflakes
  "E",
  "W", # pycodestyle
  "C90", # mccabe
  "I", # isort
  "N", # PEP8 naming
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  # "S",    # flake8-bandit
  # "BLE",  # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "B", # flake8-bugbear
  "A", # flake8-builtins
  # "COM",  # flake8-commas
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  # "DJ",   # flake8-django
  # "EM",   # flake8-errmsg
  # "EXE",  # flake8-executable
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  # "G",    # flake8-logging-format
  # "INP",  # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT", # flake8-pytest-style
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  # "PD",   # pandas-vet
  "PGH", # pygrep-hooks
  "PL", # pylint
  # "TRY",  # tryceratops
  # "NPY",  # NumPy-specific rules
  "RUF", # Ruff-specific rules
]
lint.ignore = [
  "RET505", # allow else after return
  "SIM108", # allow if-else in place of ternary
  "E111", # indentation is not a multiple of four
  "E117", # over-indented
  "ISC001", # single line implicit string concatenation
  "ISC002", # multi line implicit string concatenation
  "Q000", # bad quotes inline string
  "Q001", # bad quotes multiline string
  "Q002", # bad quotes docstring
  "Q003", # avoidable escaped quotes
  "W191", # indentation contains tabs
  "ERA001", # commented out code
]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "docs",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  "tests/artifacts",
  "src/algokit_algosdk",
]
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"src/algokit_utils/applications/app_client.py" = ["SLF001"]
"src/algokit_utils/applications/app_factory.py" = ["SLF001"]
"tests/clients/test_algorand_client.py" = ["ERA001"]
"tests/**/*" = ["PLR2004"]
# Ignore lint rules for polytest auto-generated test stubs
"tests/modules/**/*" = ["E501", "W292", "I001"]
"src/algokit_transact/__init__.py" = ["RUF022"]
"src/algokit_utils/__init__.py" = [
  "I001",
  "RUF022",
] # Ignore import sorting for __init__.py


[tool.poe.tasks]
docs = ["docs-md-only"]
docs-md-only = "sphinx-build docs/source docs/markdown -b markdown"
docstrings-check = "pydoclint src --style sphinx --arg-type-hints-in-docstring false --check-return-types false"
docs-dev = "sphinx-autobuild --ignore '**/_build/**' --ignore '**/autoapi/**' --ignore '**/.doctrees/**' docs/source docs/_build"
# Polytest tasks for test generation and validation
# Uses --git flag to pull config from central polytest repo without storing jsonc files locally
# Test execution is done globally via pytest, polytest is only used for scaffolding and validation
polytest-generate-transact = "polytest --config test_configs/transact.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' generate -t pytest"
polytest-validate-transact = "polytest --config test_configs/transact.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' validate -t pytest"
polytest-generate-algod = "polytest --config test_configs/algod_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' generate -t pytest"
polytest-validate-algod = "polytest --config test_configs/algod_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' validate -t pytest"
polytest-generate-indexer = "polytest --config test_configs/indexer_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' generate -t pytest"
polytest-validate-indexer = "polytest --config test_configs/indexer_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' validate -t pytest"
polytest-generate-kmd = "polytest --config test_configs/kmd_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' generate -t pytest"
polytest-validate-kmd = "polytest --config test_configs/kmd_client.jsonc --git 'https://github.com/algorandfoundation/algokit-polytest#main' validate -t pytest"
polytest-generate-all = [
  "polytest-generate-transact",
  "polytest-generate-algod",
  "polytest-generate-indexer",
  "polytest-generate-kmd",
]
polytest-validate-all = [
  "polytest-validate-transact",
  "polytest-validate-algod",
  "polytest-validate-indexer",
  "polytest-validate-kmd",
]

[tool.poe.tasks.ruff-check]
cmd = "ruff check src tests"

[tool.poe.tasks.mypy-check]
cmd = "mypy src"

[tool.poe.tasks.lint]
sequence = ["ruff-check", "mypy-check"]
ignore_fail = "return_non_zero"

[tool.poe.tasks.ruff-format]
cmd = "ruff format src tests"

[tool.poe.tasks.ruff-fix]
ref = "ruff-check --fix"

[tool.poe.tasks.format]
sequence = ["ruff-format", "ruff-fix"]

[tool.poe.tasks.check]
sequence = ["lint"]

[tool.poe.tasks.test]
cmd = "pytest"

[tool.poe.tasks.test-ci]
ref = """test \
        --cov=algokit_abi \
        --cov=algokit_algod_client \
        --cov=algokit_common \
        --cov=algokit_indexer_client \
        --cov=algokit_kmd_client \
        --cov=algokit_transact \
        --cov=algokit_utils \
        --cov-report=term-missing:skip-covered \
        --junitxml=pytest-junit.xml"""

[tool.poe.tasks.generate-client]
sequence = [
  { cmd = "uv run --group api-generator oas-generator --spec https://raw.githubusercontent.com/algorandfoundation/algokit-oas-generator/${OAS_BRANCH}/specs/${SPEC}.oas3.json --out src --package algokit_${SPEC}_client" },
  { cmd = "ruff check --fix src/algokit_${SPEC}_client" },
  { cmd = "ruff format src/algokit_${SPEC}_client" },
]
env.OAS_BRANCH = "main"

[tool.poe.tasks.generate-algod-client]
ref = "generate-client"
env.SPEC = "algod"

[tool.poe.tasks.generate-indexer-client]
ref = "generate-client"
env.SPEC = "indexer"

[tool.poe.tasks.generate-kmd-client]
ref = "generate-client"
env.SPEC = "kmd"

[tool.poe.tasks.generate-api-clients]
sequence = [
  "generate-algod-client",
  "generate-indexer-client",
  "generate-kmd-client",
]

[tool.poe.tasks.release-preview]
sequence = [
  { cmd = "semantic-release print-version --current" },
  { cmd = "semantic-release print-version --prerelease" },
]
help = "Preview current and next prerelease version"

[tool.poe.tasks.release-dry-run-alpha]
shell = "semantic-release -v DEBUG --noop --prerelease --define=prerelease_tag=alpha publish"
help = "Dry-run alpha release (no changes made)"

[tool.poe.tasks.release-dry-run-beta]
shell = "semantic-release -v DEBUG --noop --prerelease --define=prerelease_tag=beta publish"
help = "Dry-run beta release (no changes made)"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "group_transaction_tests",
  "group_transaction_group_tests",
  "group_generic_transaction_tests",
  "group_common_tests",
  "localnet",
]
addopts = "-n auto"
norecursedirs = [
  "src",
  ".*",
  ".git",
  ".venv",
  "dist",
  "build",
  "docs",
  ".references",
] # Ignore test collection in source directory and common hidden/build folders

[tool.mypy]
files = ["src", "tests"]
exclude = ["dist", "tests/artifacts", "src/algokit_algosdk"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
mypy_path = ["src"]

untyped_calls_exclude = ["algokit_algosdk"]

[[tool.mypy.overrides]]
module = ["algokit_algosdk", "algokit_algosdk.*"]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["tests.transactions.test_transaction_composer"]
disable_error_code = ["call-overload", "union-attr"]

[[tool.mypy.overrides]]
module = ["msgpack", "msgpack.*"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
remove_dist = false
build_command = "uv build"
version_source = "tag"
major_on_zero = true
upload_to_repository = false
tag_commit = true
branch = "main"
commit_message = "{version}\n\nskip-checks: true"
