[project]
name = "algokit-examples"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "algokit-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.uv.sources]
algokit-utils = { path = "..", editable = true }
