[project]
name = "algokit-examples"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "algokit-utils",
  "keyring",
  "boto3",
  "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.uv.sources]
algokit-utils = { path = "..", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.20.1",
]
