[project]
name = "oas-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
]

[project.scripts]
oas-generator = "oas_generator.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
